# neurobox

./: .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  PKG-INFO  README.md  labbox_mta_analysis.md  neurobox-cleanup.patch  pyproject.toml  setup.py
data/: sessions.json
docs/: session-workflow.md
neurobox/: __init__.py  __init__.py~  pipelines.py  session.py~
neurobox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
neurobox/analysis/: __init__.py  heuristics.py  neuron_quality.py  transform_origin.py
neurobox/config/: __init__.py  config.py  config.py~  session_lists.py  sessions_json.py  standards.py
neurobox/dtype/: __init__.py  __init__.py~  ang.py  data.py  data.py~  epoch.py  fet.py  lfp.py  model.py  paths.py  session.py  session.py~  spikes.py  stc.py  struct.py  struct.py~  sync.py  sync_pipelines.py  ufr.py  xyz.py
neurobox/gui/: check_eeg_states.py
neurobox/io/: __init__.py  __init__.py~  cached_compute.py  data_hash.py  get_event_times.py  load_binary.py  load_binary.py~  load_clc_clp.py  load_clu_res.py  load_clu_res.py~  load_evt.py  load_fet.py  load_loc_chunks.py  load_par.py  load_pca.py  load_position_motive_csv.py  load_spk.py  (+10 more)
scripts/: __init__.py  convert_session_list.py  demo_sirotaA_jg_05_20120316.py  demo_sirotaA_jg_05_20120316_stepwise.py
tests/: #testing.ipynb#  Untitled.ipynb  load_clu.py  load_ncs_channel.py  scripts.py  test_analysis_csd.py  test_analysis_hmm.py  test_analysis_lfp.py  test_analysis_ranges.py  test_analysis_round3.py  test_analysis_spatial.py  test_analysis_spikes.py  test_analysis_stats.py  test_check_eeg_states.py  test_config.py  test_dtype.py  test_io.py  test_io_mocap.py  test_nbspk_save.py  test_neurosuite3_binary.py  test_neurosuite3_paths.py  test_ns3_writers_binary.py  test_ns3_writers_yaml_small.py  test_pipelines.py  test_place_field_stats.py  test_pyqtgraph.py  test_pyqtgraph_bkp.py  test_round10_decoding.py  test_round10_dtypes_kinematics.py  test_round10_features.py  test_round11_mocap.py  test_round12_classifiers.py  test_round13_utilities_transformations.py  test_round14_compute_zones.py  test_round15_session_alignment.py  test_round16_viz.py  test_round17_kinematics_heuristics.py  test_round18_feature_dynamics_knn_pfs.py  test_round19_feature_selection_pipeline.py  test_round20_mta_browser.py  (+8 more)
(+99 files in other folders)
